--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="https://media.licdn.com/dms/image/D5603AQH6lSvnC_mFFA/profile-displayphoto-shrink_100_100/0/1674787211890?e=1692835200&v=beta&t=yy0MyLw0R--wFOJ4lUhnQ2eneXJx7ljYYg7FPQ5jVgY" alt="" class="img-fluid rounded-circle">
+        <img src="images/ameen.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ameen sha</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -100,14 +100,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>08 Jan 2002</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Whatsapp no:</strong> <span>9562651102</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>India,kerala</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>India,kerala</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>aameensha77@mail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>job:</strong> <span>Web Designer & Developer</span></li>
                 </ul>
               </div>
             </div>
@@ -123,7 +123,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Current Working details </h2>
           <p>Constant Learning: Developers must continuously update their skills and stay up-to-date with the latest technologies and programming languages. The field of technology is constantly evolving, and developers often need to learn new tools and frameworks to stay competitive.
 
             <br> Problem Solvers: Developers are problem solvers at their core. They analyze complex issues and develop logical solutions using their programming skills. They have the ability to break down large problems into smaller, more manageable tasks.
